fixedTop 新增 z-Index 支持

--- a/demo/css/index.css
+++ b/demo/css/index.css
@@ -18,12 +18,13 @@ ol {
   background: #ccc;
 }
 .nav {
+  position: relative;
   width: 100%;
   z-index: 9999999;
 }
 .md {
   display: flex;
-  margin: 20px auto;
+  margin: 0 auto;
   width: 800px;
   height: 40px;
   background: #37a779;
